src/components/widgetEngine/css/widgetEngine.css
.resize-vertical{
  min-height: 20px;
  resize: vertical;
  overflow: scroll;
}

.md-widget-engine{
  border: 0px dashed black;
}

.md-widget-engine-column{
  box-sizing: border-box;
  border-right: 1px dashed #aaa;
}

.md-widget-engine-column-dashed{
  border: 2px dashed black;
}


.md-widget-engine-column .md-widget-engine-column-resizer{
  position: absolute;
  top: 0;
  right: -3px;
  height: 99%;
  border: 3px solid transparent;
  cursor: move;
}


.md-widget-engine-column .md-widget-engine-new-column-handler{
  transition: all 0.25s;
  -webkit-transition: all 0.25s;
  -moz-transition: all 0.25s;
  -o-transition: all 0.25s;
  -ms-transition: all 0.25s;
  display: none;
}

.md-widget-engine-column:hover .md-widget-engine-new-column-handler{
  display: block;
}


.md-widget-engine-column .md-widget-engine-new-column-handler{
  position: absolute;
  bottom: 10px;
  right: -12px;
  cursor: pointer;
  z-index: 1000;
}

.md-widget-engine-widget-tiles-container{
  padding-top:8px;
}

.md-widget-engine-widget-tile-container{
  padding: 8px 16px;
  /*-webkit-transition: all 0.25s;
  -moz-transition: all 0.25s;
  -o-transition: all 0.25s;
  -ms-transition: all 0.25s;*/
}

.md-widget-engine-widget-tile-container.md-widget-engine-widget-moving{
  opacity: 0.25;
  -webkit-transition: -webkit-transform 0.25s ease-out;
  -moz-transition: -moz-transform 0.25s ease-out;
  -o-transition: -o-transform 0.25s ease-out;
  -ms-transition: -ms-transform 0.25s ease-out;  
  transform: scale(0.8);
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  -o-transform: scale(0.8);
}

.md-widget-engine-widget-tile-container.md-widget-engine-widget-dashed{
  border: 2px dashed black;
}

.md-widget-engine-widget-tile-container.md-widget-engine-widget-remove{
  transform: scale(0.0);
  -webkit-transform: scale(0.0);
  -moz-transform: scale(0.0);
  -ms-transform: scale(0.0);
  -o-transform: scale(0.0);
}

.md-widget-engine-widget-tile{
  -webkit-transition: -webkit-transform 0.25s ease-out;
  -moz-transition: -moz-transform 0.25s ease-out;
  -o-transition: -o-transform 0.25s ease-out;
  -ms-transition: -ms-transform 0.25s ease-out;
}

.md-widget-engine-widget-dashed .md-widget-engine-widget-tile{
  transform: scale(0.0);
  -webkit-transform: scale(0.0);
  -moz-transform: scale(0.0);
  -ms-transform: scale(0.0);
  -o-transform: scale(0.0);
}

.md-widget-engine-widget-tile-dragger{
  font-size: 1.2em;
}

.md-widget-engine-widget-tile-title-container md-toolbar {
  min-height: 20px;
}

.md-widget-engine-widget-tile-title-container md-toolbar .md-toolbar-tools{
  padding: 0;
  height: auto;
}

.md-widget-engine-widget-tile-title{
  padding: 10px;
}

.md-widget-engine-widget-tile-controls-container{
  padding: 10px; 
}

.md-widget-engine-widget-tile-control{
  cursor: pointer;
  float: right;
  margin-left: 10px;
  outline: none
}

md-toolbar.md-widget-engine-title-control-type-fab{
  height: 44px;
}

md-fab-speed-dial{
  position: absolute;
  right: 0;
}

.md-widget-engine-widget-title-menu-controls{
  position: absolute;
  right: -5px;
  top: -10px;
}

.md-widget-engine-widget-title-fab-controls{
  position: absolute;
  right: 10px;
}

.md-widget-engine-widget-title-fab-controls .md-fab-action-item button{
  margin-top: 5px;
}

.md-widget-engine-widget-tile-control:hover{

}

.md-widget-engine-widget-tile-content-container{
  
}

.md-widget-engine-widget-tile-content{
  padding: 10px;
  border-bottom: 1px solid transparent;
}


.md-widget-engine-widget-fullscreen{
  position:fixed;
  width: 100%;
  height:100%;
  top:0;
  left:0;
  padding: 0;
  margin: 0;
  z-index: 999999;
  overflow: hidden;
}

.md-widget-engine-widget-fullscreen md-content{
  position:absolute;
  width: 100%;
  height:100%;
}

.md-widget-engine-widget-fullscreen md-content div{
  /*width: 100%;
  height:100%;*/
  resize: none;
  overflow: scroll;
}



.md-widget-engine-widget-fullscreen .md-widget-engine-widget-close-control,
.md-widget-engine-widget-fullscreen .md-widget-engine-widget-sticky-control{
  display: none;
}

